--- a/index.html
+++ b/index.html
@@ -31,7 +31,17 @@
 		<h1>Gratuluji zvladl jsi vylustit sifru</h1>
 	
 		<br>
-	<h2>tady to bude</h2>
+	<h2>Sedmdesát let, dědo, máš,
+důchodu u vínka si užíváš, 
+rukama už prošel ti studentů dav,
+zdobí tě pleš, znak moudrých hlav! 
+
+Ať tě provází smích a zdraví,
+sudoku tě stále baví,
+s vnoučaty, psy i rodinou,
+starosti vždy pominou! 
+
+Všechno nejlepší!!!</h2>
 		<br/>
 		
 
